# ci2n_datasets

./: README.md  README_zh.md
jumper_identification/labels/train/: Snipaste_2024-10-30_17-51-48_train.txt  Snipaste_2024-10-30_17-51-51_train.txt  Snipaste_2024-10-30_17-51-52_train.txt  Snipaste_2024-10-30_17-54-37_train.txt  Snipaste_2024-10-30_17-55-02_train.txt  Snipaste_2024-10-30_17-55-13_train.txt  Snipaste_2024-10-30_17-55-22_train.txt  Snipaste_2024-10-30_17-55-25_train.txt  Snipaste_2024-10-30_17-55-29_train.txt  Snipaste_2024-10-30_17-55-39_train.txt  Snipaste_2024-10-30_17-55-43_train.txt  Snipaste_2024-10-31_09-57-51_train.txt  Snipaste_2024-10-31_09-58-24_train.txt  Snipaste_2024-10-31_09-58-29_train.txt  Snipaste_2024-10-31_09-58-41_train.txt  Snipaste_2024-10-31_10-04-39_train.txt  book_images_book_1_image_111.txt  book_images_book_1_image_113.txt  book_images_book_1_image_121.txt  book_images_book_1_image_122.txt  book_images_book_1_image_125.txt  book_images_book_1_image_145.txt  book_images_book_1_image_147.txt  (+639 more)
validation/: .gitignore  README.md  calc_ged.py  device_def.toml  my_networkx.py  pyproject.toml  utils_ged.py
validation/golden/: 001.json  002.json  003.json  004.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  041.json  042.json  043.json  (+81 more)
(+159 files in other folders)
