[project]
name = "netlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pydantic>=2.10.3",
    "scipy>=1.14.1",
    "toml>=0.10.2",
    "torch==2.4",
]
